terraform/stage/manifests/deploy/8-app_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-me-staging-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - %{ if subdomain_name != "" }${subdomain_name}.${domain_name}%{ else }${domain_name}%{ endif }
    secretName: app-me-tls
  rules:
  - host: %{ if subdomain_name != "" }${subdomain_name}.${domain_name}%{ else }${domain_name}%{ endif }
    http:
      paths:
      - backend:
          serviceName: app-me-svc
          servicePort: 8080
